--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -17,10 +17,12 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
+	<a href="#neighborhoods-select" class="skip-link">Skip map and it's pins?</a>
+  <main id="maincontent"> 
+    <!-- Beginning map -->
 
-  <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" aria-label="Map with restaurants"></div>
     </section>
     <section>
       <div class="filter-options">
