--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -21,19 +21,21 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+	<nav role="navigation"  aria-label="breadcrumbs">
+    <ul id="breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
+	</nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
   <!-- End header -->
-
+    <a href="#footer" class="skip-link">Skip map and it's pin?</a>
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" aria-label="Map with restaurant"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
